@@ -210,6 +210,7 @@ _atoi = atoi NOSIGFE
 atol NOSIGFE
 _atol = atol NOSIGFE
 atoll NOSIGFE
+basename SIGFE
 bcmp NOSIGFE
 _bcmp = bcmp NOSIGFE
 bcopy NOSIGFE
@@ -369,6 +370,7 @@ difftime NOSIGFE
 _difftime = difftime NOSIGFE
 dirfd SIGFE
 _dirfd = dirfd SIGFE
+dirname SIGFE
 div NOSIGFE
 _div = div NOSIGFE
 dlclose SIGFE
