@@ -247,12 +247,13 @@ details. */
       117: Export utmpx functions, Return utmp * from pututent.
       118: Export getpriority, setpriority.
       119: Export fdatasync.
+      120: Export basename, dirname.
      */
 
      /* Note that we forgot to bump the api for ualarm, strtoll, strtoull */
 
 #define CYGWIN_VERSION_API_MAJOR 0
-#define CYGWIN_VERSION_API_MINOR 119
+#define CYGWIN_VERSION_API_MINOR 120
 
      /* There is also a compatibity version number associated with the
 	shared memory regions.  It is incremented when incompatible
